--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
   "devDependencies": {
     "babel-plugin-transform-rename-properties": "^0.1.0",
     "change-case": "^4.1.1",
+    "husky": ">=4",
+    "lint-staged": ">=10",
     "prettier": "^2.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
