--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "babel-plugin"
   ],
   "scripts": {
-    "prettier": "prettier --write *.js"
+    "test": "mocha",
+    "prettier": "prettier --write **/*.js"
   },
   "devDependencies": {
     "babel-plugin-transform-rename-properties": "^0.1.0",
+    "chai": "^4.2.0",
     "change-case": "^4.1.1",
     "husky": ">=4",
     "lint-staged": ">=10",
+    "mocha": "^8.1.3",
     "prettier": "^2.1.2"
   },
   "husky": {
