--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "prettier --write **/*.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.0",
     "babel-plugin-transform-rename-properties": "^0.1.0",
     "chai": "^4.2.0",
     "change-case": "^4.1.1",
