--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
-    "babel-plugin-transform-rename-properties": "^0.1.0",
     "chai": "^4.2.0",
-    "change-case": "^4.1.1",
     "husky": ">=4",
     "lint-staged": ">=10",
     "mocha": "^8.1.3",
@@ -30,5 +28,9 @@
   },
   "lint-staged": {
     "*.{js,css,md}": "yarn prettier"
+  },
+  "dependencies": {
+    "babel-plugin-transform-rename-properties": "^0.1.0",
+    "change-case": "^4.1.1"
   }
 }
